--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-		<title>My first true three.js app</title>
-		<style>
-			body { margin: 0; }
-		</style>
-		<script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.9/dist/tweakpane.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/20.0.0/tween.umd.js"></script>
-    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-    <script type="importmap">
+	<title>Open Studios - Perth, Western Australia</title>
+	<style>
+		body {
+			margin: 0;
+		}
+	</style>
+	<script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.9/dist/tweakpane.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/20.0.0/tween.umd.js"></script>
+	<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+	<script type="importmap">
       {
         "imports": {
           "three": "https://unpkg.com/three@v0.153.0/build/three.module.js",
@@ -23,64 +26,73 @@
         }
       }
     </script>
-		<style>
-			body {
-				background-color: #ffffff;
-				margin: 0;
-				padding: 0;
-			}
+	<style>
+		body {
+			background-color: #ffffff;
+			margin: 0;
+			padding: 0;
+		}
 
-			#css,
-			#webgl {
-				width: 100%;
-				height: 100%;
-				position: absolute;
-				top: 0;
-				left: 0;
-				display: block;
-			}
+		#css,
+		#pageOverlay,
+		#webgl {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			display: block;
+		}
 
-			#css {
-				background: black;
-			}
+		#css {
+			background: black;
+		}
 
-			#webgl {
-				pointer-events: none;
-			}
+		#webgl {
+			pointer-events: none;
+		}
 
-			#exitSign {
-				background: black;
-				font-weight: bold;
-				color: #fff;
-				box-shadow: 0px 0px 5px 5px #077f58;
-				text-shadow: 2.5px 2.5px 5px #999;
-				cursor: pointer;
-				display: none;
-				border: solid 1px #077f58;
-				border-radius: 1rem;
-				padding: 1rem;
-				position: absolute;
-				top: 2rem;
-				right: 2rem;
-				z-index: 10000;
-			}
+		#pageOverlay {
+			display: none;
+			background: red;
+			z-index: 10000;
+		}
 
-			#exitSign:hover {
-				box-shadow: 0px 0px 7.5px 7.5px #75f7cd;
-				border-color:  #75f7cd;
-			}
+		#exitSign {
+			background: black;
+			font-weight: bold;
+			color: #fff;
+			box-shadow: 0px 0px 5px 5px #077f58;
+			text-shadow: 2.5px 2.5px 5px #999;
+			cursor: pointer;
+			display: none;
+			border: solid 1px #077f58;
+			border-radius: 1rem;
+			padding: 1rem;
+			position: absolute;
+			top: 2rem;
+			right: 2rem;
+			z-index: 10001;
+		}
 
-		</style>
-	</head>
-	<body>
-		<noscript>
-			This website requires Javascript for the full experience. As you don't have Javascript enabled, you are seeing the 1999 experience.
-		</noscript>
-		<a id="exitSign">EXIT</a>
-		<div id="css"></div>
-    <div id="webgl"></div>
-		<script type="module" src="./app.js"></script>
-		<script type="x-shader/x-vertex" id="vertexshader">
+		#exitSign:hover {
+			box-shadow: 0px 0px 7.5px 7.5px #75f7cd;
+			border-color: #75f7cd;
+		}
+	</style>
+</head>
+
+<body>
+	<noscript>
+		This website requires Javascript for the full experience. As you don't have Javascript enabled, you are seeing
+		the 1999 experience.
+	</noscript>
+	<a id="exitSign">EXIT</a>
+	<iframe id="pageOverlay"></iframe>
+	<div id="css"></div>
+	<div id="webgl"></div>
+	<script type="module" src="./app.js"></script>
+	<script type="x-shader/x-vertex" id="vertexshader">
 
 			varying vec2 vUv;
 
@@ -94,7 +106,7 @@
 
 		</script>
 
-		<script type="x-shader/x-fragment" id="fragmentshader">
+	<script type="x-shader/x-fragment" id="fragmentshader">
 			// Kudos to https://github.com/mrdoob/three.js/issues/14104#issuecomment-1536582334
 
 			uniform sampler2D baseTexture;
@@ -112,5 +124,6 @@
 			}
 
 		</script>
-	</body>
+</body>
+
 </html>
