--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -40,26 +40,26 @@
     <div class="content">
       <div class="row">
         <div class="column">
-          <div style="background-color: blue; width: auto; height: 400px;">Image placeholder</div>
+          <img src="./images/p1.jpg" style=" width: 100%; height: auto;" />
         </div>
         <div class="column">
-          <div style="background-color: blue; width: auto; height: 400px;">Image placeholder</div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="column">
-          <div style="background-color: blue; width: auto; height: 400px;">Image placeholder</div>
-        </div>
-        <div class="column">
-          <div style="background-color: blue; width: auto; height: 400px;">Image placeholder</div>
+          <img src="./images/p2.jpg" style=" width: 100%; height: auto;" />
         </div>
       </div>
       <div class="row">
         <div class="column">
-          <div style="background-color: blue; width: auto; height: 400px;">Image placeholder</div>
+          <img src="./images/p3.jpg" style=" width: 100%; height: auto;" />
         </div>
         <div class="column">
-          <div style="background-color: blue; width: auto; height: 400px;">Image placeholder</div>
+          <img src="./images/p4.jpg" style=" width: 100%; height: auto;" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <img src="./images/p6.jpg" style=" width: 100%; height: auto;" />
+        </div>
+        <div class="column">
+          <img src="./images/p5.jpg" style=" width: 100%; height: auto;" />
         </div>
       </div>
     </div>
